styalized; contact box sizing correctly on mobile

--- a/client/src/components/contactform/contactform.module.css
+++ b/client/src/components/contactform/contactform.module.css
@@ -1,10 +1,23 @@
 
+.formContainer {
+   min-width: min( calc(100% - 24px), 430px);
+   max-width: 800px;
+   padding: 0 12px;
+   margin: 0 auto;
+}
+
+@media only screen and (max-device-width: 460px) {
+   .formContainer, .messageInput {
+      min-width: 300px !important;
+      max-width: 300px !important;
+   }
+}
+
 form {
    display: grid;
    grid-template-columns: 100px 1fr 1fr 100px;
    grid-column-gap: 6px;
    grid-row-gap: 6px;
-   min-width: 330px;
 }
 
 .nameInput {
@@ -28,7 +41,8 @@ form {
    margin: 0;
    padding: 4px;
    width: 600px;
-   min-width: 330px;
+   min-width: min( 100%, 430px);
+   max-width: 100%;
    min-height: 5.5em;
 }
 
