--- a/client/src/content/contact/contact.module.css
+++ b/client/src/content/contact/contact.module.css
@@ -1,28 +1,12 @@
 
 .headerContainer {
-   margin: 0 auto;
+   margin: 0 0 50px 0;
+   text-align: center;
 }
 
 h1.style1 {
    color: #1e1e1e;
    position: relative;
    margin: 0;
-   padding: 6px 24px;
    font-size: 36px;
-   text-align: center;
-}
-
-h1.style1::after {
-   position: absolute;
-   top: 0;
-   bottom: 0;
-   left: 0;
-   right: 0;
-   content: '';
-   border-bottom: 2px solid #1e1e1e;
-}
-
-.centerText {
-   margin: 0 auto;
-   text-align: center;
 }
